# yenc-rs

./: Cargo.toml  README.md  yenc-draft.1.3.txt
benches/: decode_bench.rs  encode_bench.rs
src/: consts.rs  decode.rs  encode.rs  error.rs  header.rs  lib.rs  main.rs
tests/: decoding.rs  edge_cases.rs  encoding.rs  multipart.rs  roundtrip.rs
